# forsm

./: Cargo.toml  LICENSE.md  README.md
src/: assembler.rs  bootstrapped_interpreter.rs  compiler.rs  generator.rs  interpreter.rs  interpreter_bootstrap.rs  lib.rs  main.rs  parser.rs  prelude.fth  runtime.rs  test.fth
src/prelude/: 00_compiler.fth  01_controlflow.fth  01_core.fth  02_io.fth  02_memory.fth  02_strings.fth  03_io.fth  03_strings.fth  04_interpreter.fth  04_parser.fth  04_system.fth  05_parser.fth  06_output.fth  07_filesystem.fth  07_interpreter.fth  08_utils.fth  99_test.fth  FF_main.fth  compiler.fth
src/runtime/: interpreter.rs
src/rust-bootstrapper/: assembler.rs  bootstrapped_interpreter.rs  compiler.rs  lib.rs  main.rs  runtime.rs
src/rust-bootstrapper/runtime/: basic.rs  interpreter.rs
src/scripts/: assembler.fth  bootstrap-forth.fth  forsm.fth  forth.fth  hello_world.fth  test_allocate.fth
src/scripts/forsm/: 00_native.fth  01_definitions.fth  02_emulator.fth
