[package]
name = "forsm"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/rust-bootstrapper/lib.rs"

[[bin]]
name = "forsm-bootstrapper"
path = "src/rust-bootstrapper/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
parity-wasm = "0.42"
[dev-dependencies]
wasmer = "2.0.0"
wasmer-wasi = "2.0.0"